@@ -6,7 +6,6 @@ import java.util.function.Function;
 import java.util.stream.Collectors;
 
 import org.egov.common.contract.request.RequestInfo;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.upyog.chb.constants.CommunityHallBookingConstants;
 import org.upyog.chb.util.EncryptionDecryptionUtil;
@@ -16,43 +15,15 @@ import org.upyog.chb.web.models.VenueBookingRequest;
 
 import lombok.extern.slf4j.Slf4j;
 
-/**
- * This service class handles encryption and decryption operations for sensitive data
- * in the Community Hall Booking module.
- * 
- * Purpose:
- * - To ensure the security and confidentiality of sensitive data, such as applicant details.
- * - To provide reusable methods for encrypting and decrypting data in the module.
- * 
- * Dependencies:
- * - EncryptionDecryptionUtil: Utility class for performing encryption and decryption operations.
- * - CommunityHallBookingConstants: Provides constants such as encryption keys.
- * 
- * Features:
- * - Encrypts sensitive fields in booking requests, such as applicant mobile numbers.
- * - Decrypts sensitive fields when required for processing or display.
- * - Logs the state of data before and after encryption or decryption for debugging purposes.
- * 
- * Methods:
- * 1. encryptObject:
- *    - Encrypts sensitive fields in the CommunityHallBookingRequest object.
- *    - Uses the encryption key defined in CommunityHallBookingConstants.
- * 
- * 2. decryptObject:
- *    - Decrypts sensitive fields in the CommunityHallBookingRequest object.
- *    - Ensures that the original data is restored for processing or display.
- * 
- * Usage:
- * - This class is automatically managed by Spring and injected wherever encryption or decryption
- *   operations are required.
- * - It ensures consistent and secure handling of sensitive data across the module.
- */
 @Service
 @Slf4j
 public class CHBEncryptionService {
 
-	@Autowired
-	private EncryptionDecryptionUtil encryptionDecryptionUtil;
+	private final EncryptionDecryptionUtil encryptionDecryptionUtil;
+
+	public CHBEncryptionService(EncryptionDecryptionUtil encryptionDecryptionUtil) {
+		this.encryptionDecryptionUtil = encryptionDecryptionUtil;
+	}
 
 	public VenueBookingDetail encryptObject(VenueBookingRequest bookingRequest) {
 		ApplicantDetail applicantDetail = bookingRequest.getVenueBookingApplication().getApplicantDetail();
@@ -81,20 +52,19 @@ public class CHBEncryptionService {
 		Map<String, VenueBookingDetail> applicantDetailMap = bookingDetails.stream().collect(
 				Collectors.toMap(VenueBookingDetail::getBookingId, Function.identity()));
 		
-		List<ApplicantDetail> applicantDetails = bookingDetails.stream().map(detail -> detail.getApplicantDetail()).collect(Collectors.toList());
+		List<ApplicantDetail> applicantDetails = bookingDetails.stream().map(VenueBookingDetail::getApplicantDetail).toList();
 		
 		log.info("Applicant detail before decryption : " + applicantDetails.get(0).getApplicantMobileNo());
 		applicantDetails = encryptionDecryptionUtil.decryptObject(applicantDetails, 
 				CommunityHallBookingConstants.CHB_APPLICANT_DETAIL_PLAIN_DECRYPTION_KEY, ApplicantDetail.class, requestInfo);
 		
-		applicantDetails.stream().forEach( detail ->{
+		applicantDetails.forEach(detail -> {
 			if(applicantDetailMap.containsKey(detail.getBookingId())) {
 				applicantDetailMap.get(detail.getBookingId()).setApplicantDetail(detail);
 			}
 		});
 				
 		log.info("Applicant detail after decryption : " + applicantDetails.get(0).getApplicantMobileNo());
-		//bookingDetail.setApplicantDetail(applicantDetail);
 
 		return bookingDetails;
 	}
